# zfpw

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
examples/: Makefile.am  Makefile.in  test_zfp_fixratio.c  test_zfp_fixtol.c
zfpw/: Makefile.am  Makefile.in
zfpw/include/: zfp_rw.h  zfp_toolkit.h  zfpw.h
zfpw/src/: zfp_rw.c  zfp_toolkit.c  zfpw.c
